kyanite-core/snapshots/kyanite__token__tests__access.snap
---
source: kyanite-core/src/token/mod.rs
expression: stream.tokens
---
[
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 1,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "main",
        ),
        span: Span {
            line: 1,
            column: 5,
            length: 4,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 9,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 10,
            length: 1,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 1,
            column: 12,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 2,
            column: 5,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 2,
            column: 12,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "kyanite",
        ),
        span: Span {
            line: 2,
            column: 13,
            length: 7,
        },
    },
    Token {
        kind: Dot,
        lexeme: None,
        span: Span {
            line: 2,
            column: 20,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "fs",
        ),
        span: Span {
            line: 2,
            column: 21,
            length: 2,
        },
    },
    Token {
        kind: Dot,
        lexeme: None,
        span: Span {
            line: 2,
            column: 23,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "read",
        ),
        span: Span {
            line: 2,
            column: 24,
            length: 4,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 2,
            column: 28,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "\"examples/access.kya\"",
        ),
        span: Span {
            line: 2,
            column: 29,
            length: 21,
        },
    },
    Token {
        kind: Comma,
        lexeme: None,
        span: Span {
            line: 2,
            column: 50,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "kyanite",
        ),
        span: Span {
            line: 2,
            column: 52,
            length: 7,
        },
    },
    Token {
        kind: Dot,
        lexeme: None,
        span: Span {
            line: 2,
            column: 59,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "fs",
        ),
        span: Span {
            line: 2,
            column: 60,
            length: 2,
        },
    },
    Token {
        kind: Dot,
        lexeme: None,
        span: Span {
            line: 2,
            column: 62,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "O_READ",
        ),
        span: Span {
            line: 2,
            column: 63,
            length: 6,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 2,
            column: 69,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 2,
            column: 70,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 2,
            column: 71,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 3,
            column: 1,
            length: 1,
        },
    },
]
