kyanite-core/snapshots/kyanite__token__tests__calls.snap
---
source: kyanite-core/src/token.rs
expression: stream.tokens
---
- kind: Fun
  lexeme: ~
  span:
    line: 1
    column: 1
    length: 3
- kind: Identifier
  lexeme: foo
  span:
    line: 1
    column: 5
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 1
    column: 8
    length: 1
- kind: Identifier
  lexeme: bar
  span:
    line: 1
    column: 9
    length: 3
- kind: Colon
  lexeme: ~
  span:
    line: 1
    column: 12
    length: 1
- kind: Type
  lexeme: int
  span:
    line: 1
    column: 14
    length: 3
- kind: RightParen
  lexeme: ~
  span:
    line: 1
    column: 17
    length: 1
- kind: Colon
  lexeme: ~
  span:
    line: 1
    column: 18
    length: 1
- kind: Type
  lexeme: int
  span:
    line: 1
    column: 20
    length: 3
- kind: LeftBrace
  lexeme: ~
  span:
    line: 1
    column: 24
    length: 1
- kind: Return
  lexeme: ~
  span:
    line: 2
    column: 4
    length: 6
- kind: Identifier
  lexeme: bar
  span:
    line: 2
    column: 11
    length: 3
- kind: Semicolon
  lexeme: ~
  span:
    line: 2
    column: 14
    length: 1
- kind: RightBrace
  lexeme: ~
  span:
    line: 3
    column: 1
    length: 1
- kind: Fun
  lexeme: ~
  span:
    line: 5
    column: 1
    length: 3
- kind: Identifier
  lexeme: bar
  span:
    line: 5
    column: 5
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 5
    column: 8
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 5
    column: 9
    length: 1
- kind: Colon
  lexeme: ~
  span:
    line: 5
    column: 10
    length: 1
- kind: Type
  lexeme: float
  span:
    line: 5
    column: 12
    length: 5
- kind: LeftBrace
  lexeme: ~
  span:
    line: 5
    column: 18
    length: 1
- kind: Return
  lexeme: ~
  span:
    line: 6
    column: 4
    length: 6
- kind: Literal
  lexeme: "42."
  span:
    line: 6
    column: 11
    length: 3
- kind: Semicolon
  lexeme: ~
  span:
    line: 6
    column: 14
    length: 1
- kind: RightBrace
  lexeme: ~
  span:
    line: 7
    column: 1
    length: 1
- kind: Fun
  lexeme: ~
  span:
    line: 9
    column: 1
    length: 3
- kind: Identifier
  lexeme: helloWorld
  span:
    line: 9
    column: 5
    length: 10
- kind: LeftParen
  lexeme: ~
  span:
    line: 9
    column: 15
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 9
    column: 16
    length: 1
- kind: LeftBrace
  lexeme: ~
  span:
    line: 9
    column: 18
    length: 1
- kind: Identifier
  lexeme: println
  span:
    line: 10
    column: 4
    length: 7
- kind: LeftParen
  lexeme: ~
  span:
    line: 10
    column: 11
    length: 1
- kind: Literal
  lexeme: "\"Hello world!\""
  span:
    line: 10
    column: 12
    length: 14
- kind: RightParen
  lexeme: ~
  span:
    line: 10
    column: 26
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 10
    column: 27
    length: 1
- kind: RightBrace
  lexeme: ~
  span:
    line: 11
    column: 1
    length: 1
- kind: Fun
  lexeme: ~
  span:
    line: 13
    column: 1
    length: 3
- kind: Identifier
  lexeme: main
  span:
    line: 13
    column: 5
    length: 4
- kind: LeftParen
  lexeme: ~
  span:
    line: 13
    column: 9
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 13
    column: 10
    length: 1
- kind: LeftBrace
  lexeme: ~
  span:
    line: 13
    column: 12
    length: 1
- kind: Identifier
  lexeme: helloWorld
  span:
    line: 14
    column: 4
    length: 10
- kind: LeftParen
  lexeme: ~
  span:
    line: 14
    column: 14
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 14
    column: 15
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 14
    column: 16
    length: 1
- kind: Identifier
  lexeme: println
  span:
    line: 15
    column: 4
    length: 7
- kind: LeftParen
  lexeme: ~
  span:
    line: 15
    column: 11
    length: 1
- kind: Identifier
  lexeme: foo
  span:
    line: 15
    column: 12
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 15
    column: 15
    length: 1
- kind: Literal
  lexeme: "72"
  span:
    line: 15
    column: 16
    length: 2
- kind: RightParen
  lexeme: ~
  span:
    line: 15
    column: 18
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 15
    column: 19
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 15
    column: 20
    length: 1
- kind: Identifier
  lexeme: println
  span:
    line: 16
    column: 4
    length: 7
- kind: LeftParen
  lexeme: ~
  span:
    line: 16
    column: 11
    length: 1
- kind: Identifier
  lexeme: bar
  span:
    line: 16
    column: 12
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 16
    column: 15
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 16
    column: 16
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 16
    column: 17
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 16
    column: 18
    length: 1
- kind: Identifier
  lexeme: println
  span:
    line: 17
    column: 4
    length: 7
- kind: LeftParen
  lexeme: ~
  span:
    line: 17
    column: 11
    length: 1
- kind: Identifier
  lexeme: max
  span:
    line: 17
    column: 12
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 17
    column: 15
    length: 1
- kind: Literal
  lexeme: "10"
  span:
    line: 17
    column: 16
    length: 2
- kind: Comma
  lexeme: ~
  span:
    line: 17
    column: 18
    length: 1
- kind: Literal
  lexeme: "300"
  span:
    line: 17
    column: 20
    length: 3
- kind: RightParen
  lexeme: ~
  span:
    line: 17
    column: 23
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 17
    column: 24
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 17
    column: 25
    length: 1
- kind: Identifier
  lexeme: println
  span:
    line: 18
    column: 4
    length: 7
- kind: LeftParen
  lexeme: ~
  span:
    line: 18
    column: 11
    length: 1
- kind: Identifier
  lexeme: min
  span:
    line: 18
    column: 12
    length: 3
- kind: LeftParen
  lexeme: ~
  span:
    line: 18
    column: 15
    length: 1
- kind: Literal
  lexeme: "10."
  span:
    line: 18
    column: 16
    length: 3
- kind: Comma
  lexeme: ~
  span:
    line: 18
    column: 19
    length: 1
- kind: Literal
  lexeme: "300."
  span:
    line: 18
    column: 21
    length: 4
- kind: RightParen
  lexeme: ~
  span:
    line: 18
    column: 25
    length: 1
- kind: RightParen
  lexeme: ~
  span:
    line: 18
    column: 26
    length: 1
- kind: Semicolon
  lexeme: ~
  span:
    line: 18
    column: 27
    length: 1
- kind: RightBrace
  lexeme: ~
  span:
    line: 19
    column: 1
    length: 1

