kyanite-core/snapshots/kyanite__token__tests__loooong.snap
---
source: kyanite-core/src/token.rs
expression: stream.errors
---
- filename: test-cases/tokens/loooong.kya
  heading: unterminated string
  line: "    println(\"hello world);"
  span:
    line: 102
    column: 13
    length: 1
  text: opening quote here

