kyanite-core/snapshots/kyanite__token__tests__unterm.snap
---
source: kyanite-core/src/token/mod.rs
expression: stream.errors
---
[
    PreciseError {
        filename: "test-cases/tokens/unterm.kya",
        heading: "unterminated string",
        source: "    println(\"hello world);",
        span: Span {
            line: 2,
            column: 13,
            length: 1,
        },
        text: "opening quote here",
    },
]
